# GrouVox

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-04-13-atlas-cluster-reporting.md
docs/specs/: 2026-04-13-atlas-cluster-reporting-design.md
docs/superpowers/plans/: 2026-04-04-dpabistat-implementation.md
docs/superpowers/specs/: 2026-04-04-dpabistat-design.md
scripts/: convert_atlas_labels.py
src/dpabistat/: __init__.py  cli.py  correction.py  glm.py  io.py  smoothness.py  ttest.py
src/grouvox/: __init__.py  atlas.py  cli.py  correction.py  plot.py  regression.py  smoothness.py  ttest.py
src/grouvox/atlases/: aal_labels.json  ho_cort_labels.json  ho_sub_labels.json
tests/: conftest.py  test_atlas.py  test_cli.py  test_correction.py  test_glm.py  test_io.py  test_packaging.py  test_plot.py  test_regression.py  test_smoothness.py  test_ttest.py
