[project]
name = "dpabistat"
version = "0.1.0"
description = "Voxel-wise group-level statistical analysis for neuroimaging"
requires-python = ">=3.10"
dependencies = [
    "nibabel>=5.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "click>=8.0",
]

[project.scripts]
dpabistat = "dpabistat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dpabistat"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
