[project]
name = "grouvox"
version = "0.1.1"
description = "Voxel-wise group-level statistical analysis for neuroimaging"
requires-python = ">=3.10"
dependencies = [
    "nibabel>=5.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "click>=8.0",
]

[project.scripts]
grouvox = "grouvox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grouvox"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
